# chicago_crime_api

./: .gitignore  Dockerfile  Dockerfile.hf  LICENSE  README.md  README_HF.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: download_data.py  process_data.py  train_model.py
src/chicago_crime_api/: __init__.py  config.py  main.py  schemas.py
src/chicago_crime_api/api/: __init__.py  health.py  predictions.py
src/chicago_crime_api/features/: __init__.py  config.py  validation.py
src/chicago_crime_api/services/: __init__.py  cache.py  feature_builder.py  grid_mapper.py  historical_data.py  prediction.py
tests/: conftest.py  test_api.py  test_pipeline.py
ui/: README.md  __init__.py  api_client.py  app.py  map_utils.py  react-migration-config.json
