[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chicago-crime-api"
version = "0.1.0"
description = "Production-grade Crime Prediction API with MLOps best practices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Habib Bayo", email = "bayo.linkedin@outlook.fr" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "mlflow>=2.10.0",
    "joblib>=1.3.0",
    # Core project dependencies
    "eventflow @ git+https://github.com/BayoHabib/eventflow.git",
    "chicago-crime-downloader @ git+https://github.com/BayoHabib/chicago_crime_data_cli.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
crime-api = "chicago_crime_api.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chicago_crime_api"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008"]  # B008: Query/Depends in defaults is standard FastAPI

[tool.ruff.lint.isort]
known-first-party = ["chicago_crime_api"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/chicago_crime_api --cov-report=term-missing"
